final fixes and wrapup

--- a/css/main.scss
+++ b/css/main.scss
@@ -64,7 +64,7 @@ nav {
   .close {
     float: right;
     margin: 2em;
-    width: 2.5em;
+    width: 2em;
   }
 }
 
@@ -73,7 +73,7 @@ header {
   justify-content: space-between;
 
   svg {
-    width: 3em;
+    width: 2em;
     margin-top: 0;
     cursor: pointer;
   }
